feat: improved tokens table

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -42,12 +42,12 @@
   "ask_order": "Попитайте за поръчка",
   "ask_order_cancellation": "Поискайте анулиране на поръчка",
   "ask_order_placement": "Попитайте Поставяне на поръчка",
-  "asset": "Актив",
-  "asset_decimals": "Десетични знаци на активи",
-  "asset_issuance": "Издаване на активи",
-  "asset_name": "Име на актива",
-  "asset_transfer": "Прехвърляне на активи",
-  "assets": "Активи",
+  "asset": "Токен",
+  "asset_decimals": "Десетични знаци",
+  "asset_issuance": "Издаване на символи",
+  "asset_name": "Име на токена",
+  "asset_transfer": "Прехвърляне на жетони",
+  "assets": "Жетони",
   "attachment": "Прикачен файл",
   "back": "обратно",
   "balance": "Баланс",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Не е намерено прикачено съобщение.",
   "error_no_public_key": "Акаунтът няма публичен ключ.",
   "error_not_allowed": "Не е позволено.",
-  "error_not_enough_assets": "Няма достатъчно активи.",
+  "error_not_enough_assets": "Няма достатъчно символи.",
   "error_not_enough_funds": "Няма достатъчно средства.",
   "error_not_forging": "Акаунтът не се фалшифицира.",
   "error_not_specified": "__name__ не е посочено.",
@@ -235,7 +235,7 @@
   "messages": "Съобщения",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Плащания",
-  "my_assets": "Моите активи",
+  "my_assets": "Моите жетони",
   "name": "Име",
   "network": "Мрежа",
   "new_message": "Ново съобщение",
@@ -421,5 +421,6 @@
   "you_sent_to": "Акаунт __a__ изпратен __b__ до __c__",
   "show_testnet_nodes": "Показване на Testnet възли",
   "message_too_long": "Съобщението е твърде дълго",
-  "reset": "Нулиране"
+  "reset": "Нулиране",
+  "last_price": "Последна цена"
 }
