--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -42,12 +42,12 @@
   "ask_order": "Demanar comanda",
   "ask_order_cancellation": "Demaneu la cancel·lació de la comanda",
   "ask_order_placement": "Pregunta la ubicació de la comanda",
-  "asset": "Actiu",
-  "asset_decimals": "Decimals d’actius",
-  "asset_issuance": "Emissió d’actius",
-  "asset_name": "Nom del recurs",
-  "asset_transfer": "Transferència d’actius",
-  "assets": "Actius",
+  "asset": "Testimoni",
+  "asset_decimals": "Decimals de token",
+  "asset_issuance": "Emissió de token",
+  "asset_name": "Nom del testimoni",
+  "asset_transfer": "Transferència de testimoni",
+  "assets": "Fitxes",
   "attachment": "Adjunt",
   "back": "esquena",
   "balance": "Equilibri",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "No s'ha trobat cap missatge adjunt.",
   "error_no_public_key": "El compte no té una clau pública.",
   "error_not_allowed": "No permès.",
-  "error_not_enough_assets": "No hi ha prou recursos.",
+  "error_not_enough_assets": "No hi ha prou fitxes.",
   "error_not_enough_funds": "No hi ha prou fons.",
   "error_not_forging": "El compte no s'està forjant.",
   "error_not_specified": "__nom__ no especificat.",
@@ -235,7 +235,7 @@
   "messages": "Missatges",
   "minimum_fee": "Mínim",
   "multi_out_payment": "Pagaments",
-  "my_assets": "Els meus actius",
+  "my_assets": "Les meves fitxes",
   "name": "Nom",
   "network": "Xarxa",
   "new_message": "Nou missatge",
@@ -421,5 +421,6 @@
   "you_sent_to": "El compte __a__ ha enviat __b__ a __c__",
   "show_testnet_nodes": "Mostra els nodes de Testnet",
   "message_too_long": "El missatge és massa llarg",
-  "reset": "Restableix"
+  "reset": "Restableix",
+  "last_price": "Darrer preu"
 }
