--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -42,12 +42,12 @@
   "ask_order": "Zeptejte se na objednávku",
   "ask_order_cancellation": "Zeptejte se na zrušení objednávky",
   "ask_order_placement": "Zeptejte se na umístění objednávky",
-  "asset": "Aktivum",
-  "asset_decimals": "Desetinná čísla aktiv",
-  "asset_issuance": "Vydání majetku",
-  "asset_name": "Název díla",
-  "asset_transfer": "Převod majetku",
-  "assets": "Aktiva",
+  "asset": "Žeton",
+  "asset_decimals": "Desetinná čísla tokenů",
+  "asset_issuance": "Vydání tokenu",
+  "asset_name": "Název tokenu",
+  "asset_transfer": "Tokenový přenos",
+  "assets": "Žetony",
   "attachment": "Příloha",
   "back": "Zadní",
   "balance": "Zůstatek",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Nebyla nalezena žádná připojená zpráva.",
   "error_no_public_key": "Účet nemá veřejný klíč.",
   "error_not_allowed": "Nepovoleno.",
-  "error_not_enough_assets": "Nedostatek aktiv.",
+  "error_not_enough_assets": "Nedostatek tokenů.",
   "error_not_enough_funds": "Nedostatek finančních prostředků.",
   "error_not_forging": "Účet se nezfalšuje.",
   "error_not_specified": "__name__ nespecifikováno.",
@@ -235,7 +235,7 @@
   "messages": "Zprávy",
   "minimum_fee": "Minimální",
   "multi_out_payment": "Platby",
-  "my_assets": "Moje aktiva",
+  "my_assets": "Moje žetony",
   "name": "název",
   "network": "Síť",
   "new_message": "Nová zpráva",
@@ -421,5 +421,6 @@
   "you_sent_to": "Účet __a__ odeslán __b__ do __c__",
   "show_testnet_nodes": "Zobrazit uzly Testnet",
   "message_too_long": "Zpráva je příliš dlouhá",
-  "reset": "Resetovat"
+  "reset": "Resetovat",
+  "last_price": "Poslední cena"
 }
