--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -42,12 +42,12 @@
   "ask_order": "Bestellung anfordern",
   "ask_order_cancellation": "Verkaufsauftrag stornieren",
   "ask_order_placement": "Verkaufsauftrag platzieren",
-  "asset": "Anlagegut",
-  "asset_decimals": "Asset-Dezimalstellen",
-  "asset_issuance": "Asset-Ausgabe",
-  "asset_name": "Asset-Name",
-  "asset_transfer": "Asset übertragen",
-  "assets": "Assets",
+  "asset": "Token",
+  "asset_decimals": "Token-Dezimalstellen",
+  "asset_issuance": "Token-Ausgabe",
+  "asset_name": "Token-Name",
+  "asset_transfer": "Token-Transfer",
+  "assets": "Token",
   "attachment": "Anhang",
   "back": "Zurück",
   "balance": "Guthaben",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Keine angehängte Nachricht gefunden.",
   "error_no_public_key": "Das Konto hat keinen öffentlichen Schlüssel.",
   "error_not_allowed": "Nicht erlaubt.",
-  "error_not_enough_assets": "Nicht genügend Vermögenswerte.",
+  "error_not_enough_assets": "Nicht genug Token.",
   "error_not_enough_funds": "Nicht genug Geld.",
   "error_not_forging": "Konto wird nicht gefälscht.",
   "error_not_specified": "__name__ nicht angegeben.",
@@ -235,7 +235,7 @@
   "messages": "Mitteilungen",
   "minimum_fee": "Minimum",
   "multi_out_payment": "Zahlungen",
-  "my_assets": "Assets",
+  "my_assets": "Meine Token",
   "name": "Name",
   "network": "Netzwerk",
   "new_message": "Neue Nachricht",
@@ -421,5 +421,6 @@
   "you_sent_to": "Konto __a__ hat __b__ an __c__ gesendet",
   "show_testnet_nodes": "Testnet-Knoten anzeigen",
   "message_too_long": "Nachricht ist zu lang",
-  "reset": "Zurücksetzen"
+  "reset": "Zurücksetzen",
+  "last_price": "Letzter Preis"
 }
