--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -42,12 +42,12 @@
   "ask_order": "Demander la commande",
   "ask_order_cancellation": "Demander une annulation de commande",
   "ask_order_placement": "Demander la passation de commande",
-  "asset": "Actif",
-  "asset_decimals": "Décimales de l'actif",
-  "asset_issuance": "Émission d'actifs",
-  "asset_name": "Nom de l'actif",
-  "asset_transfer": "Transfert d'actifs",
-  "assets": "Les atouts",
+  "asset": "Jeton",
+  "asset_decimals": "Décimales de jeton",
+  "asset_issuance": "Émission de jetons",
+  "asset_name": "Nom du jeton",
+  "asset_transfer": "Transfert de jetons",
+  "assets": "Jetons",
   "attachment": "Attachement",
   "back": "Dos",
   "balance": "Équilibre",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Aucun message joint trouvé.",
   "error_no_public_key": "Le compte n'a pas de clé publique.",
   "error_not_allowed": "Interdit.",
-  "error_not_enough_assets": "Pas assez d'actifs.",
+  "error_not_enough_assets": "Pas assez de jetons.",
   "error_not_enough_funds": "Pas assez de fonds.",
   "error_not_forging": "Le compte n'est pas falsifié.",
   "error_not_specified": "__nom__ non spécifié.",
@@ -235,7 +235,7 @@
   "messages": "messages",
   "minimum_fee": "Le minimum",
   "multi_out_payment": "Paiements",
-  "my_assets": "Mes actifs",
+  "my_assets": "Mes jetons",
   "name": "Nom",
   "network": "Réseau",
   "new_message": "Nouveau message",
@@ -421,5 +421,6 @@
   "you_sent_to": "Le compte __a__ a envoyé __b__ à __c__",
   "show_testnet_nodes": "Afficher les nœuds Testnet",
   "message_too_long": "Le message est trop long",
-  "reset": "Réinitialiser"
+  "reset": "Réinitialiser",
+  "last_price": "Dernier prix"
 }
