--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -42,12 +42,12 @@
   "ask_order": "Pedir pedido",
   "ask_order_cancellation": "Solicita a cancelación da orde",
   "ask_order_placement": "Pregunta a colocación de pedidos",
-  "asset": "Activo",
-  "asset_decimals": "Decimais de activos",
-  "asset_issuance": "Emisión de activos",
-  "asset_name": "Nome do activo",
-  "asset_transfer": "Transferencia de activos",
-  "assets": "Activos",
+  "asset": "Token",
+  "asset_decimals": "Decimais de token",
+  "asset_issuance": "Emisión de token",
+  "asset_name": "Nome do token",
+  "asset_transfer": "Transferencia de token",
+  "assets": "Fichas",
   "attachment": "Anexo",
   "back": "De volta",
   "balance": "Equilibrio",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Non se atopou ningunha mensaxe anexa.",
   "error_no_public_key": "A conta non ten unha clave pública.",
   "error_not_allowed": "Prohibido.",
-  "error_not_enough_assets": "Non hai activos suficientes.",
+  "error_not_enough_assets": "Non hai suficientes fichas.",
   "error_not_enough_funds": "Non hai fondos suficientes.",
   "error_not_forging": "A conta non se forxa.",
   "error_not_specified": "__nome__ non especificado.",
@@ -235,7 +235,7 @@
   "messages": "Mensaxes",
   "minimum_fee": "Mínimo",
   "multi_out_payment": "Pagamentos",
-  "my_assets": "Os meus activos",
+  "my_assets": "As miñas fichas",
   "name": "Nome",
   "network": "Rede",
   "new_message": "Nova mensaxe",
@@ -421,5 +421,6 @@
   "you_sent_to": "A conta __a__ enviou __b__ a __c__",
   "show_testnet_nodes": "Mostrar os nodos de Testnet",
   "message_too_long": "A mensaxe é demasiado longa",
-  "reset": "Restablecer"
+  "reset": "Restablecer",
+  "last_price": "Último prezo"
 }
