--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -42,12 +42,12 @@
   "ask_order": "注文する",
   "ask_order_cancellation": "注文のキャンセルを依頼する",
   "ask_order_placement": "注文を依頼する",
-  "asset": "資産",
-  "asset_decimals": "資産小数",
-  "asset_issuance": "資産の発行",
-  "asset_name": "資産名",
-  "asset_transfer": "資産譲渡",
-  "assets": "資産",
+  "asset": "トークン",
+  "asset_decimals": "トークンの小数",
+  "asset_issuance": "トークン発行",
+  "asset_name": "トークン名",
+  "asset_transfer": "トークン転送",
+  "assets": "トークン",
   "attachment": "添付ファイル",
   "back": "バック",
   "balance": "残高",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "添付されたメッセージが見つかりませんでした。",
   "error_no_public_key": "アカウントに公開鍵がありません。",
   "error_not_allowed": "禁止されている。",
-  "error_not_enough_assets": "資産が足りない。",
+  "error_not_enough_assets": "トークンが足りません。",
   "error_not_enough_funds": "資金が足りない。",
   "error_not_forging": "アカウントは偽造されていません。",
   "error_not_specified": "__name__ は指定されていません。",
@@ -235,7 +235,7 @@
   "messages": "メッセージ",
   "minimum_fee": "最小",
   "multi_out_payment": "支払い",
-  "my_assets": "私の資産",
+  "my_assets": "私のトークン",
   "name": "名前",
   "network": "通信網",
   "new_message": "新しいメッセージ",
@@ -421,5 +421,6 @@
   "you_sent_to": "アカウント __a__ が __b__ を __c__ に送信しました",
   "show_testnet_nodes": "Testnetノードを表示する",
   "message_too_long": "メッセージが長すぎます",
-  "reset": "リセット"
+  "reset": "リセット",
+  "last_price": "最終価格"
 }
