--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -42,12 +42,12 @@
   "ask_order": "Prašyti užsakymo",
   "ask_order_cancellation": "Paprašykite užsakymo atšaukimo",
   "ask_order_placement": "Klauskite užsakymo pateikimo",
-  "asset": "Turtas",
-  "asset_decimals": "Turto dešimtainiai ženklai",
-  "asset_issuance": "Turto išleidimas",
-  "asset_name": "Turto pavadinimas",
-  "asset_transfer": "Turto perdavimas",
-  "assets": "Turtas",
+  "asset": "Žetonas",
+  "asset_decimals": "Žetonų dešimtainiai",
+  "asset_issuance": "Žetonų išdavimas",
+  "asset_name": "Ženklo pavadinimas",
+  "asset_transfer": "Žetonų perdavimas",
+  "assets": "Žetonai",
   "attachment": "Priedas",
   "back": "Atgal",
   "balance": "Balansas",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Nerastas pridedamas pranešimas.",
   "error_no_public_key": "Paskyroje nėra viešojo rakto.",
   "error_not_allowed": "Neleidžiama.",
-  "error_not_enough_assets": "Nepakanka turto.",
+  "error_not_enough_assets": "Nepakanka žetonų.",
   "error_not_enough_funds": "Nepakanka lėšų.",
   "error_not_forging": "Sąskaita nėra klastotė.",
   "error_not_specified": "__name__ nenurodytas.",
@@ -235,7 +235,7 @@
   "messages": "Žinutės",
   "minimum_fee": "Minimumas",
   "multi_out_payment": "Mokėjimai",
-  "my_assets": "Mano turtas",
+  "my_assets": "Mano žetonai",
   "name": "vardas",
   "network": "Tinklas",
   "new_message": "Nauja žinutė",
@@ -421,5 +421,6 @@
   "you_sent_to": "Sąskaita __a__ išsiųsta __b__ į __c__",
   "show_testnet_nodes": "Rodyti „Testnet“ mazgus",
   "message_too_long": "Pranešimas per ilgas",
-  "reset": "Iš naujo nustatyti"
+  "reset": "Iš naujo nustatyti",
+  "last_price": "Paskutinė kaina"
 }
