--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -42,12 +42,12 @@
   "ask_order": "Peça Ordem",
   "ask_order_cancellation": "Pedir cancelamento de pedido",
   "ask_order_placement": "Ask Order Placement",
-  "asset": "De ativos",
-  "asset_decimals": "Decimais de ativos",
-  "asset_issuance": "Emissão de ativos",
-  "asset_name": "Nome do Ativo",
-  "asset_transfer": "Transferência de ativos",
-  "assets": "Ativos",
+  "asset": "Token",
+  "asset_decimals": "Token Decimais",
+  "asset_issuance": "Emissão de token",
+  "asset_name": "Nome do token",
+  "asset_transfer": "Transferência de Token",
+  "assets": "Tokens",
   "attachment": "Acessório",
   "back": "Voltar",
   "balance": "Saldo",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Nenhuma mensagem anexada encontrada.",
   "error_no_public_key": "A conta não possui uma chave pública.",
   "error_not_allowed": "Não permitido.",
-  "error_not_enough_assets": "Recursos insuficientes.",
+  "error_not_enough_assets": "Não há tokens suficientes.",
   "error_not_enough_funds": "Fundos insuficientes.",
   "error_not_forging": "A conta não está falsificando.",
   "error_not_specified": "__name__ não especificado.",
@@ -235,7 +235,7 @@
   "messages": "Mensagens",
   "minimum_fee": "Mínimo",
   "multi_out_payment": "Pagamentos",
-  "my_assets": "Meus Ativos",
+  "my_assets": "Meus tokens",
   "name": "Nome",
   "network": "Rede",
   "new_message": "Nova mensagem",
@@ -421,5 +421,6 @@
   "you_sent_to": "Conta __a__ enviada __b__ para __c__",
   "show_testnet_nodes": "Mostrar nós Testnet",
   "message_too_long": "A mensagem é muito longa",
-  "reset": "Redefinir"
+  "reset": "Redefinir",
+  "last_price": "Último preço"
 }
