--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -42,12 +42,12 @@
   "ask_order": "Спросите Заказать",
   "ask_order_cancellation": "Спросите об отмене заказа",
   "ask_order_placement": "Спросите о размещении заказа",
-  "asset": "Актив",
-  "asset_decimals": "Десятичные дроби активов",
-  "asset_issuance": "Выпуск активов",
-  "asset_name": "Название актива",
-  "asset_transfer": "Передача активов",
-  "assets": "Ресурсы",
+  "asset": "Токен",
+  "asset_decimals": "Десятичные знаки токена",
+  "asset_issuance": "Выпуск токенов",
+  "asset_name": "Имя токена",
+  "asset_transfer": "Перенос токенов",
+  "assets": "Жетоны",
   "attachment": "Вложение",
   "back": "Назад",
   "balance": "Остаток средств",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Приложенных сообщений не найдено.",
   "error_no_public_key": "У учетной записи нет открытого ключа.",
   "error_not_allowed": "Не допускается.",
-  "error_not_enough_assets": "Недостаточно активов.",
+  "error_not_enough_assets": "Недостаточно токенов.",
   "error_not_enough_funds": "Недостаточно средств.",
   "error_not_forging": "Аккаунт не подделывается.",
   "error_not_specified": "__name__ не указано.",
@@ -235,7 +235,7 @@
   "messages": "Сообщения",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Платежи",
-  "my_assets": "Мои активы",
+  "my_assets": "Мои жетоны",
   "name": "Имя",
   "network": "Сеть",
   "new_message": "Новое сообщение",
@@ -421,5 +421,6 @@
   "you_sent_to": "Счет __a__ отправил __b__ на __c__",
   "show_testnet_nodes": "Показать узлы тестовой сети",
   "message_too_long": "Сообщение слишком длинное",
-  "reset": "Сброс настроек"
+  "reset": "Сброс настроек",
+  "last_price": "Последняя цена"
 }
