--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -42,12 +42,12 @@
   "ask_order": "Spýtať sa na objednávku",
   "ask_order_cancellation": "Požiadajte o zrušenie objednávky",
   "ask_order_placement": "Spýtajte sa na umiestnenie objednávky",
-  "asset": "Majetok",
-  "asset_decimals": "Desatinné čísla majetku",
-  "asset_issuance": "Vydanie majetku",
-  "asset_name": "Názov diela",
-  "asset_transfer": "Prevod majetku",
-  "assets": "Aktíva",
+  "asset": "Token",
+  "asset_decimals": "Desatinné miesta žetónov",
+  "asset_issuance": "Vydanie tokenu",
+  "asset_name": "Token Name",
+  "asset_transfer": "Tokenový prenos",
+  "assets": "Žetóny",
   "attachment": "Príloha",
   "back": "späť",
   "balance": "Rovnováha",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Nenašla sa žiadna pripojená správa.",
   "error_no_public_key": "Účet nemá verejný kľúč.",
   "error_not_allowed": "Nepovolené.",
-  "error_not_enough_assets": "Nedostatok majetku.",
+  "error_not_enough_assets": "Nie je dostatok tokenov.",
   "error_not_enough_funds": "Nedostatok finančných prostriedkov.",
   "error_not_forging": "Účet sa falšuje.",
   "error_not_specified": "__name__ nie je zadané.",
@@ -235,7 +235,7 @@
   "messages": "Správy",
   "minimum_fee": "Minimálne",
   "multi_out_payment": "Platby",
-  "my_assets": "Moje aktíva",
+  "my_assets": "Moje žetóny",
   "name": "názov",
   "network": "Sieť",
   "new_message": "Nová správa",
@@ -421,5 +421,6 @@
   "you_sent_to": "Účet __a__ bol odoslaný __b__ na adresu __c__",
   "show_testnet_nodes": "Zobraziť uzly Testnet",
   "message_too_long": "Správa je príliš dlhá",
-  "reset": "Resetovať"
+  "reset": "Resetovať",
+  "last_price": "Posledná cena"
 }
