--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -42,12 +42,12 @@
   "ask_order": "Аск Ордер",
   "ask_order_cancellation": "Затражи отказивање налога",
   "ask_order_placement": "Питајте за постављање налога",
-  "asset": "Имовина",
-  "asset_decimals": "Децималс имовине",
-  "asset_issuance": "Издавање имовине",
-  "asset_name": "Назив средства",
-  "asset_transfer": "Пренос имовине",
-  "assets": "Средства",
+  "asset": "Токен",
+  "asset_decimals": "Токен Децималс",
+  "asset_issuance": "Токен Иссуанце",
+  "asset_name": "Токен Наме",
+  "asset_transfer": "Токен Трансфер",
+  "assets": "Токени",
   "attachment": "Прилог",
   "back": "Назад",
   "balance": "Равнотежа",
@@ -158,7 +158,7 @@
   "error_no_attached_message": "Није пронађена ниједна приложена порука.",
   "error_no_public_key": "Налог нема јавни кључ.",
   "error_not_allowed": "Није дозвољено.",
-  "error_not_enough_assets": "Нема довољно имовине.",
+  "error_not_enough_assets": "Нема довољно жетона.",
   "error_not_enough_funds": "Нема довољно средстава.",
   "error_not_forging": "Рачун се не фалсификује.",
   "error_not_specified": "__наме__ није наведено.",
@@ -235,7 +235,7 @@
   "messages": "Поруке",
   "minimum_fee": "Минимум",
   "multi_out_payment": "Плаћања",
-  "my_assets": "Моја имовина",
+  "my_assets": "Моји жетони",
   "name": "Име",
   "network": "Мрежа",
   "new_message": "Нова порука",
@@ -421,5 +421,6 @@
   "you_sent_to": "Налог __а__ је послат __б__ на __ц__",
   "show_testnet_nodes": "Прикажи чворове Тестнет",
   "message_too_long": "Порука је предугачка",
-  "reset": "Ресетовање"
+  "reset": "Ресетовање",
+  "last_price": "Последња цена"
 }
