--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -422,5 +422,6 @@
   "show_testnet_nodes": "Tampilkan Node Testnet",
   "message_too_long": "Pesan terlalu panjang",
   "reset": "Mengatur ulang",
-  "last_price": "Harga terakhir"
+  "last_price": "Harga terakhir",
+  "supply": "Jumlah Pasokan"
 }
