--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -422,5 +422,6 @@
   "show_testnet_nodes": "Показать узлы тестовой сети",
   "message_too_long": "Сообщение слишком длинное",
   "reset": "Сброс настроек",
-  "last_price": "Последняя цена"
+  "last_price": "Последняя цена",
+  "supply": "Общее предложение"
 }
