--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -422,5 +422,6 @@
   "show_testnet_nodes": "Прикажи чворове Тестнет",
   "message_too_long": "Порука је предугачка",
   "reset": "Ресетовање",
-  "last_price": "Последња цена"
+  "last_price": "Последња цена",
+  "supply": "Тотал Суппли"
 }
