--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -422,5 +422,6 @@
   "show_testnet_nodes": "टेस्टनेट नोड्स दिखाएं",
   "message_too_long": "संदेश बहुत लंबा है",
   "reset": "रीसेट",
-  "last_price": "अंतिम मूल्य"
+  "last_price": "अंतिम मूल्य",
+  "supply": "कुल आपूर्ति"
 }
