feat: first successful token transfer

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -423,5 +423,7 @@
   "message_too_long": "Съобщението е твърде дълго",
   "reset": "Нулиране",
   "last_price": "Последна цена",
-  "supply": "Общо предлагане"
+  "supply": "Общо предлагане",
+  "invalid_address": "Невалиден адрес",
+  "unknown_address": "Неизвестен адрес"
 }
