--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -423,5 +423,7 @@
   "message_too_long": "Το μήνυμα είναι πολύ μεγάλο",
   "reset": "Επαναφορά",
   "last_price": "Τελική τιμή",
-  "supply": "Συνολική Προμήθεια"
+  "supply": "Συνολική Προμήθεια",
+  "invalid_address": "Μη έγκυρη διεύθυνση",
+  "unknown_address": "Άγνωστη διεύθυνση"
 }
