--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -423,5 +423,7 @@
   "message_too_long": "Сообщение слишком длинное",
   "reset": "Сброс настроек",
   "last_price": "Последняя цена",
-  "supply": "Общее предложение"
+  "supply": "Общее предложение",
+  "invalid_address": "Неверный адрес",
+  "unknown_address": "Неизвестный адрес"
 }
