--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -423,5 +423,7 @@
   "message_too_long": "Повідомлення задовге",
   "reset": "Скинути",
   "last_price": "Остання ціна",
-  "supply": "Загальна пропозиція"
+  "supply": "Загальна пропозиція",
+  "invalid_address": "Недійсна адреса",
+  "unknown_address": "Невідома адреса"
 }
